--- a/src/app/presentation/components/footer/footer.component.html
+++ b/src/app/presentation/components/footer/footer.component.html
@@ -1,10 +1,12 @@
 <footer>
-    <div class="footer">
+    <div class="footer bg-dark shadow-sm">
     <div class="row">
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a>
-    <a href="#"><i class="fa fa-youtube"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
+        </ul>
     </div>
     
     <div class="row">
@@ -15,10 +17,6 @@
     <li><a href="#">Terms & Conditions</a></li>
     <li><a href="#">Career</a></li>
     </ul>
-    </div>
-    
-    <div class="row">
-    INFERNO Copyright © 2021 Inferno - All rights reserved || Designed By: Mahesh 
     </div>
     </div>
     </footer>
