--- a/src/app/presentation/components/movie-card/movie-card.component.css
+++ b/src/app/presentation/components/movie-card/movie-card.component.css
@@ -8,6 +8,7 @@
     transition: all .5s cubic-bezier(.8,.5,.2,1.4);
     overflow: hidden;
     position: relative;
+    font-family: 'Play', sans-serif;
 }
 .card img{
     width: 100%;
@@ -40,13 +41,11 @@
 }
 .card .description h1{
     color: #000000;
-    letter-spacing: 1px;
     margin: 40px;
 }
 .card p{
     line-height: 24px;
-   margin: 5%;
-    font-size: 1.2vh;
+    margin: 5%;
 }
 .card button{
     width: fit-content;
@@ -59,6 +58,7 @@
     outline: none;
     box-shadow: 0px 2px 3px rgba(0,0,0,.4);
     transition: all .5s ease-in-out;
+    font-family: 'Play', sans-serif;
 }
 .card button:hover{
     transform: scale(.95) translateX(-5px);
