--- a/src/app/presentation/components/navbar/navbar.component.css
+++ b/src/app/presentation/components/navbar/navbar.component.css
@@ -1,7 +1,4 @@
-code {
-    background: #fff;
-    padding: 0.2rem;
-    border-radius: 0.2rem;
-    margin: 0 0.3rem;
-  }
+.navbar{
+  font-family: 'Play', sans-serif;
+}
   
