--- a/src/app/presentation/pages/home/home.component.css
+++ b/src/app/presentation/pages/home/home.component.css
@@ -8,7 +8,7 @@
   }
 
   .headerb {
-    background-image: url(src\assets\Images\image.webp);
+  background-image: url(src\assets\Images\image.webp);
 	-webkit-box-reflect: below 5px
 	linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
 	-webkit-transition: all 0.5s ease;
@@ -20,6 +20,7 @@
     font-size: 10em;
     color: whitesmoke;
     letter-spacing: 1rem;
+    font-family: 'Play', sans-serif;
   }
 
 button {
@@ -33,6 +34,7 @@ button {
 	transition-duration: 250ms;
     transition-timing-function: ease-out;
     transition-property: opacity, transform;
+    font-family: 'Play', sans-serif;
 }
 
 button:hover {
