--- a/src/app/presentation/pages/home/home.component.html
+++ b/src/app/presentation/pages/home/home.component.html
@@ -13,7 +13,7 @@
     <section class="headerb d-flex flex-column align-items-center justify-content-center">
         <div class="bg-5 text-center">
           <h1 class="animated-shadow">Movie App</h1>
-          <button class="button is-medium">See your list!</button>
+          <button routerLink="/watchList" class="button is-medium">See your list!</button>
         </div>
       </section>
 </div>
