--- a/src/app/presentation/components/movie-card/movie-card.component.css
+++ b/src/app/presentation/components/movie-card/movie-card.component.css
@@ -59,6 +59,7 @@
     box-shadow: 0px 2px 3px rgba(0,0,0,.4);
     transition: all .5s ease-in-out;
     font-family: 'Play', sans-serif;
+    margin: 2%;
 }
 .card button:hover{
     transform: scale(.95) translateX(-5px);
