--- a/src/app/presentation/pages/home/home.component.html
+++ b/src/app/presentation/pages/home/home.component.html
@@ -6,10 +6,10 @@
         </div>
         <div class="sortButtons">
           <button (click)="sortList('default')">Default</button>
-          <button (click)="sortList('titleAsc')">Title Asc</button>
-          <button (click)="sortList('titleDesc')">Title Desc</button>
-          <button (click)="sortList('dateAsc')">Date Asc</button>
-          <button (click)="sortList('dateDesc')">Date Desc</button>
+          <button (click)="sortList('titleAsc')"><i class="fa-solid fa-caret-down"></i>A-Z</button>
+          <button (click)="sortList('titleDesc')"><i class="fa-solid fa-caret-down"></i>Z-A</button>
+          <button (click)="sortList('dateAsc')"><i class="fa-solid fa-caret-up"></i>Date</button>
+          <button (click)="sortList('dateDesc')"><i class="fa-solid fa-caret-down"></i>Date</button>
         </div>
       </section>
 </div>
