--- a/src/app/presentation/components/movie-card/movie-card.component.css
+++ b/src/app/presentation/components/movie-card/movie-card.component.css
@@ -65,3 +65,10 @@
     transform: scale(.95) translateX(-5px);
     transition: all .5s ease-in-out;
 }
+
+button[disabled]{
+    background-color: #878787 !important;
+    transform: none !important;
+    transition: none !important;
+    cursor: default !important;
+    }
