--- a/src/app/presentation/pages/404/404.component.html
+++ b/src/app/presentation/pages/404/404.component.html
@@ -1,1 +1,6 @@
-<p>404 works!</p>
+<div class="background">
+    <div class="title">
+        <h2>404</h2>
+        <h3>Page not found. Return <a routerLink="/home">Home</a></h3>
+    </div>
+</div>
