--- a/src/app/presentation/pages/login/login.component.html
+++ b/src/app/presentation/pages/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="col-md-6 offset-md-3">
           <div class="card my-5">
   
-            <form class="card-body cardbody-color p-lg-5">
+            <form class="card-body cardbody-color p-lg-5" (submit)="onSubmit(username.value, password.value)">
   
               <div class="text-center">
                 <img src="\assets\Images\cine-logo.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
@@ -12,11 +12,11 @@
               </div>
   
               <div class="mb-3">
-                <input type="text" class="form-control" id="Username" aria-describedby="emailHelp"
-                  placeholder="User Name">
+                <input type="text" class="form-control" id="Username" #username aria-describedby="emailHelp" 
+                placeholder="User Name">
               </div>
               <div class="mb-3">
-                <input type="password" class="form-control" id="password" placeholder="Password">
+                <input type="password" class="form-control" id="password" #password placeholder="Password">
               </div>
               <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Login</button></div>
             </form>
