--- a/src/app/presentation/pages/watchlist/watchlist.component.css
+++ b/src/app/presentation/pages/watchlist/watchlist.component.css
@@ -1,87 +1,79 @@
-.main_card {
+.main_card-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: flex-start;
+	min-height: 67.4vh;
+	background-color: rgb(3, 5, 69); 
+  }
+
+  .message-container {
+	text-align: center;
+	padding: 20px;
+	margin-top: 5%;
+	border-radius: 10px;
 	color: #fff;
-	width: 760px;
-	height: 390px;
-	margin: 50px auto;
+  }
+
+  a{
+	color:rgb(52, 58, 64) ;
+  }
+
+.main_card {
+	display: flex;
+	color: #fff;
+	width: 60vw;
+	margin: 3%;
+	aspect-ratio: 1/.35;
 	display: -webkit-box;
 	display: -ms-flexbox;
-	display: flex;
-	max-width: 770px;
-	background: #00C9FF; 
-	background: -webkit-linear-gradient(to right, #92FE9D, #00C9FF);
-	background: -webkit-gradient(linear, left top, right top, from(#92FE9D), to(#00C9FF));
-	background: -webkit-linear-gradient(left, #92FE9D, #00C9FF);
-	background: -o-linear-gradient(left, #92FE9D, #00C9FF);
-	background: linear-gradient(to right, #92FE9D, #00C9FF); 
+	background: rgb(3, 5, 69); 
+	background: -webkit-linear-gradient(to right, darkgoldenrod, rgb(52, 58, 64));
+	background: -webkit-gradient(linear, left top, right top, from(darkgoldenrod), to(rgb(52, 58, 64)));
+	background: -webkit-linear-gradient(left, darkgoldenrod, rgb(52, 58, 64));
+	background: -o-linear-gradient(left, darkgoldenrod, rgb(52, 58, 64));
+	background: linear-gradient(to right, darkgoldenrod, rgb(52, 58, 64)); 
 	-webkit-box-shadow: 0 0 40px rgba(0,0,0,0.3); 
-	        box-shadow: 0 0 40px rgba(0,0,0,0.3);
+	box-shadow: 0 0 40px rgba(0,0,0,0.3);
+	font-family: 'Play', sans-serif;
 }
 
 .card_left {
 	width: 90%;
+	overflow: hidden;
+	height: 100%;
 }
 
-.card_datails {
-	width: 90%;
-	padding: 30px;
-	margin-top: -25px;
-}
 .card_datails  h1 {
-	font-size: 30px;
+	font-size: 4vh;
+	margin: 2%;
+	
 }
 .card_right img {
-	height: 390px;
-	border-radius: 2px;
+	width: 15vw;
+	aspect-ratio: 1/1.38;
+	padding: 2%;
 }
 .card_right {
 	border-radius: 2px;
 }
-
-.card_cat {
-	width: 100%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-}
-
-.PG, .year, .genre, .time {
-	color: fff;
-	padding: 10px;
-	font-weight: bold;
-	border-radius: 15px;
-}
-
-.PG {
-	background: #92FE9D;
-	-webkit-box-shadow: 0 0 50px rgba(0,0,0,0.1);
-	        box-shadow: 0 0 50px rgba(0,0,0,0.1);
-	-webkit-transition: 300ms ease-in-out;
-}
-
-.disc {
-	font-weight: 100;
-	line-height: 27px;
-}
-a {
-	color: darkcyan;
-	display: block;
-	text-decoration: none;
-}
 .social-btn {
-	margin-left: -10px;
+	display: flex;
+  }
+.social-btn  button{
+	background-color: rgb(52, 58, 64);
+	font-size: 1.8vh;
+	width: 14.5vw;
+	
 }
 button {
 	color: #fff;
 	border: none;
-	padding: 20px;
 	outline: none;
-	font-size: 12px;
-	margin-top: 30px;
+	font-size: 1.5vh;
+	margin-top: 5%;
 	margin-left: 10px;
-	background: #92FE9D;
+	background: darkgoldenrod;
 	border-radius: 12px;
 	-webkit-box-shadow: 0 0 20px rgba(0,0,0,0.2);
 	        box-shadow: 0 0 20px rgba(0,0,0,0.2);
@@ -95,26 +87,7 @@ button:hover {
 	    -ms-transform: scale(1.1);
 	        transform: scale(1.1);
 }
-.play_btn {
-	height: 100%;
-	margin: -394px auto;
-	position: relative;
-	text-align: center;
-	background: rgba(0, 244, 170,0.4);
-	box-shadow: 0 0 50px rgba(0,0,0,0.2);
-}
-.fa-play-circle {
-	color: #255;
-	font-size: 160px;
-	margin-top: 110px;
-	-webkit-animation: bounce 1.0s -0.4s infinite;
-	        animation: bounce 1.0s -0.4s infinite;
-}
 
-.fa-play-circle:hover {
-	color: aqua;
-	animation: bounce 0.4s infinite;
-}
 @-webkit-keyframes bounce {
   8% {
     transform: scale(0.3);
@@ -141,28 +114,31 @@ button:hover {
 		}
 }
 
-
-
-
-
-/*  FOLLOW*/
-.Follow {	  background:url("https://pbs.twimg.com/profile_images/959092900708544512/v4Db9QRv_bigger.jpg")no-repeat center / contain;
-	width: 50px;
-	height: 50px;
-	bottom: 9px;
-	right: 20px;
-	display:block;
-	position:fixed;
-	border-radius:50%;
-	z-index:999;
-	animation:  rotation 10s infinite linear;
+@media only screen and (max-width: 1050px) {
+	.main_card-container {
+		padding-bottom: 10%;
 	}
-
-@-webkit-keyframes rotation {
-		from {
-				-webkit-transform: rotate(0deg);
-		}
-		to {
-				-webkit-transform: rotate(359deg);
-		}
-}
+    .card_left{
+		display: none;
+	}
+	.card_right{
+		width: 100%;
+	}
+	
+	  .main_card {
+		width: 50vw;
+		aspect-ratio: 1/1.35;
+		background: transparent;
+		margin: 10%;
+	  }
+	
+	  .card_right img {
+		width: 100%; 
+		aspect-ratio: 1/1.54;
+		padding: 0%;
+	  }
+	
+	  .social-btn button {
+		width: 100%; 
+	  }
+  }
