--- a/src/app/presentation/components/footer/footer.component.css
+++ b/src/app/presentation/components/footer/footer.component.css
@@ -33,21 +33,7 @@
     }
     
     .footer .row a i{
-    font-size:2em;
+    font-size:2vh;
     margin:0% 1%;
     }
     
-    @media (max-width:720px){
-    .footer{
-    text-align:left;
-    padding:5%;
-    }
-    .footer .row ul li{
-    display:block;
-    margin:10px 0px;
-    text-align:left;
-    }
-    .footer .row a i{
-    margin:0% 3%;
-    }
-    }
