--- a/src/app/presentation/pages/detail/detail.component.css
+++ b/src/app/presentation/pages/detail/detail.component.css
@@ -46,16 +46,16 @@ h1,h3,h5,p{
   font-size: 1.2vh;
   outline: none;
   box-shadow: 0px 2px 3px rgba(0,0,0,.4);
-  transition: all .5s ease-in-out;
+  transition: all .27s ease-in-out;
   font-family: 'Play', sans-serif;
 }
 .actions button:hover{
   transform: scale(.95) translateX(-5px);
-  transition: all .5s ease-in-out;
+  transition: all .27s ease-in-out;
 }
 
   .ratio{
-    max-width: 60vw;
+    max-width: 50vw;
     aspect-ratio: 1/.6;
     margin-bottom: 5%;
   }
@@ -65,4 +65,19 @@ button[disabled]{
   transform: none !important;
   transition: none !important;
   cursor: default !important;
+  }
+
+  @media (max-width:600px){
+    
+    .right .rating{
+      display: none;
+    }
+  }
+  @media (min-width:601px){
+    .left h5{
+      display: none;
+    }
+    .left h3{
+      display: none;
+    }
   }
