Revert "responsive fixs"
This reverts commit 52b5b3c4953b8f9fb4b8c9b555329e48ab8b2156.

--- a/src/app/presentation/components/footer/footer.component.css
+++ b/src/app/presentation/components/footer/footer.component.css
@@ -33,7 +33,21 @@
     }
     
     .footer .row a i{
-    font-size:2vh;
+    font-size:2em;
     margin:0% 1%;
     }
     
+    @media (max-width:720px){
+    .footer{
+    text-align:left;
+    padding:5%;
+    }
+    .footer .row ul li{
+    display:block;
+    margin:10px 0px;
+    text-align:left;
+    }
+    .footer .row a i{
+    margin:0% 3%;
+    }
+    }
