--- a/src/app/presentation/pages/login/login.component.css
+++ b/src/app/presentation/pages/login/login.component.css
@@ -5,15 +5,11 @@ section{
 	-webkit-transition: all 0.5s ease;
 	-o-transition: all 0.5s ease;
 	transition: all 0.5s ease;
-  min-height: 67.9vh;
+  height: 67.4vh;
 }
 
 form{
   font-family: 'Play', sans-serif;
-}
-
-.card{
-  background: transparent;
 }
 
 .btn-color{
@@ -47,10 +43,4 @@ form{
   button:hover {
     transform: scale(1.1);
     opacity: 1;
-  }
-
-  @media (max-width:720px){
-    section{
-      min-height: 73vh;;
-    }
   }
