--- a/src/app/presentation/pages/watchlist/watchlist.component.css
+++ b/src/app/presentation/pages/watchlist/watchlist.component.css
@@ -59,12 +59,11 @@
 }
 .social-btn {
 	display: flex;
-	width: 100%;
   }
 .social-btn  button{
 	background-color: rgb(52, 58, 64);
 	font-size: 1.8vh;
-	min-width: 14.5vw;
+	width: 14.5vw;
 	
 }
 button {
@@ -72,7 +71,7 @@ button {
 	border: none;
 	outline: none;
 	font-size: 1.5vh;
-	margin-top: 6%;
+	margin-top: 5%;
 	margin-left: 10px;
 	background: darkgoldenrod;
 	border-radius: 12px;
@@ -130,7 +129,7 @@ button:hover {
 		width: 50vw;
 		aspect-ratio: 1/1.35;
 		background: transparent;
-		margin: 12%;
+		margin: 10%;
 	  }
 	
 	  .card_right img {
@@ -138,12 +137,8 @@ button:hover {
 		aspect-ratio: 1/1.54;
 		padding: 0%;
 	  }
-	  .social-btn {
-		align-items: center;
-		justify-content: center;
-	  }
 	
 	  .social-btn button {
-		width: 100%;
+		width: 100%; 
 	  }
   }
