cleaning and optimization

--- a/src/app/presentation/components/navbar/navbar.component.css
+++ b/src/app/presentation/components/navbar/navbar.component.css
@@ -1,4 +1,17 @@
 .navbar{
   font-family: 'Play', sans-serif;
 }
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-brand i {
+  font-size: 24px;
+}
+
+.navbar-brand span {
+  margin-top: 2px;
+}
   
