--- a/src/app/presentation/components/footer/footer.component.html
+++ b/src/app/presentation/components/footer/footer.component.html
@@ -2,10 +2,10 @@
     <div class="footer bg-dark shadow-sm">
     <div class="row">
         <ul>
-            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
+            <li><a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="#" aria-label="Instagram"><i class="fa-brands fa-square-instagram"></i></a></li>
+            <li><a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="#" aria-label="Twitter"><i class="fa-brands fa-square-twitter"></i></a></li>
         </ul>
     </div>
     
