--- a/src/app/presentation/components/movie-card/movie-card.component.css
+++ b/src/app/presentation/components/movie-card/movie-card.component.css
@@ -1,74 +1,86 @@
-.card{
+.card {
     aspect-ratio: 1/1.8;
     width: 25vh;
     background: #fff;
     border: 2px solid #fff;
-    box-shadow: 0px 4px 7px rgba(0,0,0,.5);
+    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.5);
     cursor: pointer;
-    transition: all .5s cubic-bezier(.8,.5,.2,1.4);
+    transition: all 0.5s cubic-bezier(0.8, 0.5, 0.2, 1.4);
     overflow: hidden;
     position: relative;
     font-family: 'Play', sans-serif;
-}
-.card img{
+  }
+  
+  .card img {
     width: 100%;
-    height:100%;
-    transition: all .5s cubic-bezier(.8,.5,.2,1.4);
-}
-.descriptions{
+    height: 100%;
+    transition: all 0.5s cubic-bezier(0.8, 0.5, 0.2, 1.4);
+  }
+  
+  .descriptions {
     position: absolute;
-    background-color: rgba(255,255,255,.7);
-    width:100%;
-    height:100%;
-    transition: all .7s ease-in-out;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+    transition: all 0.7s ease-in-out;
     box-sizing: border-box;
     clip-path: circle(0% at 100% 100%);
-}
-.card:hover .descriptions{
-    left:0px;
-    transition: all .7s ease-in-out;
+  }
+  
+  .card:hover .descriptions {
+    left: 0;
+    transition: all 0.7s ease-in-out;
     clip-path: circle(75%);
-}
-.card:hover{
-    transition: all .5s cubic-bezier(.8,.5,.2,1.4);
-    box-shadow: 0px 2px 3px rgba(0,0,0,.3);
-    transform: scale(.97);
-}
-.card:hover img{
-    transition: all .5s cubic-bezier(.8,.5,.2,1.4);
+  }
+  
+  .card:hover {
+    transition: all 0.5s cubic-bezier(0.8, 0.5, 0.2, 1.4);
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+    transform: scale(0.97);
+  }
+  
+  .card:hover img {
+    transition: all 0.5s cubic-bezier(0.8, 0.5, 0.2, 1.4);
     transform: scale(1.6) rotate(20deg);
     filter: blur(3px);
-}
-.card .description h1{
+  }
+  
+  .descriptions h1 {
     color: #000000;
-    margin: 40px;
-}
-.card p{
+    margin: 5%;
+    font-size: 2.5vh;
+  }
+  
+  .descriptions p {
     line-height: 24px;
     margin: 5%;
-}
-.card button{
+    font-size: 1.5vh;
+  }
+  
+  .card button {
     width: fit-content;
     height: 40px;
     cursor: pointer;
     border-style: none;
     background-color: #100f0f;
-    color:#fff;
+    color: #fff;
     font-size: 1.2vh;
     outline: none;
-    box-shadow: 0px 2px 3px rgba(0,0,0,.4);
-    transition: all .27s ease-in-out;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.4);
+    transition: all 0.27s ease-in-out;
     font-family: 'Play', sans-serif;
     margin: 2%;
-}
-.card button:hover{
-    transform: scale(.95) translateX(-5px);
-    transition: all .27s ease-in-out;
-}
-
-button[disabled]{
+  }
+  
+  .card button:hover {
+    transform: scale(0.95) translateX(-5px);
+    transition: all 0.27s ease-in-out;
+  }
+  
+  button[disabled] {
     background-color: #878787 !important;
     transform: none !important;
     transition: none !important;
     cursor: default !important;
-    }
+  }
+  
