--- a/src/app/presentation/components/movie-card/movie-card.component.html
+++ b/src/app/presentation/components/movie-card/movie-card.component.html
@@ -1,22 +1,18 @@
 <div class="card">
-    <img src= "{{movie.image}}" routerLink="/detail/{{movie.id}}">
-    <div class="descriptions" >
-        <h1 style="font-size: 2.5vh;">{{movie.title}}</h1>
-        <p style="font-size: 1.5vh;">
-            {{movie.description}}
-        </p>
-        <p style="font-size: 1.5vh;">
-           Rating: <i class="fa-solid fa-star" style="color: darkgoldenrod;"></i> {{movie.rating}}
-        </p><p style="font-size: 1.5vh;">
-            Duration:{{movie.duration}}
-         </p>
-         <button (click)="onAddToList()" [disabled]="isInWatchlist()">
-            <i class="fa-solid fa-plus"></i>
-            {{ isInWatchlist() ? 'On List' : 'Add Watch List' }}
-          </button>
-        <button routerLink="/detail/{{movie.id}}">
-            <i class="fa-solid fa-plus"></i>
-            See Detail
-        </button>
+    <img src="{{ movie.image }}" alt="{{ movie.title }}" routerLink="/detail/{{ movie.id }}">
+    <div class="descriptions">
+      <h1>{{ movie.title }}</h1>
+      <p>{{ movie.description }}</p>
+      <p>Rating: <i class="fa-solid fa-star" style="color: darkgoldenrod;"></i> {{ movie.rating }}</p>
+      <p>Duration: {{ movie.duration }}</p>
+      <button (click)="onAddToList()" [disabled]="isInWatchlist()">
+        <i class="fa-solid fa-plus"></i>
+        {{ isInWatchlist() ? 'On List' : 'Add to Watch List' }}
+      </button>
+      <button routerLink="/detail/{{ movie.id }}">
+        <i class="fa-solid fa-eye"></i>
+        See Detail
+      </button>
     </div>
-</div>
+  </div>
+  
