--- a/src/app/presentation/components/navbar/navbar.component.html
+++ b/src/app/presentation/components/navbar/navbar.component.html
@@ -1,26 +1,28 @@
 <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
-    <div class="container">
-      <a routerLink="/home" class="navbar-brand">
-        <!-- Logo Image -->
-        <i class="fa-solid fa-ticket d-inline-block align-middle mr-2" style="color: aliceblue;"></i>
-        <!-- Logo Text -->
-        <span class="text-uppercase font-weight-bold">Movie App</span>
-      </a>
-  
-      <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" 
-      class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
-  
-      <div id="navbarSupportedContent" class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item" *ngIf="isAuthenticated()"><a class="nav-link">Hello! User <i class="fa-regular fa-user"></i></a></li>
-          <li class="nav-item"><a routerLink="/home" class="nav-link">Home</a></li>
-          <li class="nav-item" *ngIf="!isAuthenticated()"><a routerLink="" class="nav-link">Login</a></li>
-          <li class="nav-item"><a routerLink="/watchList" class="nav-link">Watch List</a></li>
-          <li class="nav-item" *ngIf="isAuthenticated()">
-            <button (click)="logout()" class="btn btn-link nav-link">Logout</button>
-          </li>
-        </ul>
-      </div>
+  <div class="container">
+    <a routerLink="/home" class="navbar-brand">
+      <!-- Logo Image -->
+      <i class="fa-solid fa-ticket d-inline-block align-middle mr-2" style="color: aliceblue;" alt="Movie App Logo"></i>
+      <!-- Logo Text -->
+      <span class="text-uppercase font-weight-bold">Movie App</span>
+    </a>
+
+    <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" 
+    class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
+
+    <div id="navbarSupportedContent" class="collapse navbar-collapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item" *ngIf="isAuthenticated()">
+          <a class="nav-link" href="#"><i class="fa-regular fa-user"></i>Hello! User</a>
+        </li>
+        <li class="nav-item"><a routerLink="/home" class="nav-link">Home</a></li>
+        <li class="nav-item" *ngIf="!isAuthenticated()"><a routerLink="" class="nav-link">Login</a></li>
+        <li class="nav-item"><a routerLink="/watchList" class="nav-link">Watch List</a></li>
+        <li class="nav-item" *ngIf="isAuthenticated()">
+          <button (click)="logout()" class="btn btn-link nav-link">Logout</button>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
