--- a/src/app/presentation/pages/404/404.component.html
+++ b/src/app/presentation/pages/404/404.component.html
@@ -1,6 +1,6 @@
-<div class="background">
+<main class="background">
     <div class="title">
         <h2>404</h2>
-        <h3>Page not found. Return <a routerLink="/home">Home</a></h3>
+        <h3>Page not found. Return <a routerLink="/home" class="home-link">Home</a></h3>
     </div>
-</div>
+</main>
