--- a/src/app/presentation/pages/detail/detail.component.css
+++ b/src/app/presentation/pages/detail/detail.component.css
@@ -1,83 +1,88 @@
-section{
-  background-image: url(src\assets\Images\image.webp);
-	-webkit-box-reflect: below 5px
-	linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
-	-webkit-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
-	transition: all 0.5s ease;
-  font-family: 'Play', sans-serif;
+section {
+  background-image: url(src/assets/Images/image.webp);
   background-repeat: no-repeat;
-    background-size: cover;
+  background-size: cover;
+  font-family: 'Play', sans-serif;
+  -webkit-box-reflect: below 5px linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
+  transition: all 0.5s ease;
+}
 
+.row {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  backdrop-filter: blur(15px);
+  box-shadow: 0 15px 25px rgba(255, 255, 255, 0.1);
 }
-.row{
-    background: #fff;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(15px);
-    box-shadow: 0 15px 25px rgba(255, 255, 255, 0.1);
-}
-.container{
+
+.container {
   justify-content: center;
   align-items: center;
 }
 
-.col-6{
+.col-6 {
   margin-top: 5%;
 }
 
-img{
+img {
   height: 40vh;
 }
 
-
-h1,h3,h5,p{
-    color: whitesmoke;
-    max-width: 90%;
+h1, h3, h5, p {
+  color: whitesmoke;
+  max-width: 90%;
 }
 
-.actions button{
+.actions button {
   width: fit-content;
   height: 40px;
   cursor: pointer;
   border-style: none;
   background-color: #100f0f;
-  color:#fff;
+  color: #fff;
   font-size: 1.2vh;
   outline: none;
-  box-shadow: 0px 2px 3px rgba(0,0,0,.4);
-  transition: all .27s ease-in-out;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.4);
+  transition: all 0.27s ease-in-out;
   font-family: 'Play', sans-serif;
 }
-.actions button:hover{
-  transform: scale(.95) translateX(-5px);
-  transition: all .27s ease-in-out;
+
+.actions button:hover {
+  transform: scale(0.95) translateX(-5px);
+  transition: all 0.27s ease-in-out;
 }
 
-  .ratio{
-    max-width: 50vw;
-    aspect-ratio: 1/.6;
-    margin-bottom: 5%;
-  }
+.ratio {
+  max-width: 50vw;
+  aspect-ratio: 1 / 0.6;
+  margin-bottom: 5%;
+}
 
-button[disabled]{
+button[disabled] {
   background-color: #878787 !important;
   transform: none !important;
   transition: none !important;
   cursor: default !important;
-  }
+}
 
-  @media (max-width:600px){
-    
-    .right .rating{
-      display: none;
-    }
+@media (max-width: 600px) {
+  
+}
+
+@media (max-width: 688px) {
+  section{
+    min-height: 90vh;
   }
-  @media (min-width:601px){
-    .left h5{
-      display: none;
-    }
-    .left h3{
-      display: none;
-    }
+  .right .rating {
+    display: none;
   }
+  .right .genre {
+    display: none;
+  }
+}
+
+@media (min-width: 689px) {
+  .left h5,
+  .left h3 {
+    display: none;
+  }
+}
