--- a/src/app/presentation/pages/detail/detail.component.html
+++ b/src/app/presentation/pages/detail/detail.component.html
@@ -1,32 +1,35 @@
 <section>
     <div class="container">
-        <div class="row">
-                <div class="left col-6 d-flex flex-column justify-content-center align-items-center text-center">
-                    <img src= {{movieDetail?.image}} class="img-fluid">
-                    <h3 class="rating">Rating: <i class="fa-solid fa-star" style="color: darkgoldenrod;"></i>{{movieDetail?.rating}}</h3>
-                    
-                </div>
-            <div class="right col-6">
-                <h1 class="title">{{movieDetail?.title}}</h1>
-                <h3 class="rating">Rating: <i class="fa-solid fa-star" style="color: darkgoldenrod;"></i>{{movieDetail?.rating}}</h3>
-                <h5 class="rDate">Relase Date: {{movieDetail!.rDate.day}}/{{movieDetail!.rDate.month}}/{{movieDetail!.rDate.year}} </h5>
-                <h5 class="genre">Genre: {{movieDetail?.genre}}</h5>
-                <h3 class="titDesc">Description: </h3>
-                <p class="description">{{movieDetail?.description}}</p>
-                <h5 class="duration">Duration: {{movieDetail?.duration}}</h5>
-                <div class="actions">
-                    <button (click)="onAddToList()" [disabled]="isInWatchlist()">
-                        <i class="fa-solid fa-plus"></i>
-                        {{ isInWatchlist() ? 'On List' : 'Add Watch List' }}
-                      </button>
-                </div>
-            </div>
-            <div class="g-start-2" style="grid-row: 2; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                <h3 style="margin: 10px;">Trailer:</h3>
-                <div class="ratio ratio-16x9">
-                    <iframe *ngIf="safeTrailerUrl" [src]="safeTrailerUrl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-            </div>
+      <div class="row">
+        <div class="left col-6 d-flex flex-column justify-content-center align-items-center text-center">
+          <img [src]="movieDetail?.image" class="img-fluid" *ngIf="movieDetail?.image" alt={{movieDetail?.title}}>
+          <h3 class="rating">Rating: <i class="fa-solid fa-star" style="color: darkgoldenrod;"></i>{{movieDetail?.rating}}</h3>
+          <h5 class="genre">Genre: {{movieDetail?.genre}}</h5>
+        </div>
+  
+        <div class="right col-6">
+          <h1 class="title">{{movieDetail?.title}}</h1>
+          <h3 class="rating">Rating: <i class="fa-solid fa-star" style="color: darkgoldenrod;"></i>{{movieDetail?.rating}}</h3>
+          <h5 class="rDate">Release Date: {{movieDetail?.rDate!.day}}/{{movieDetail?.rDate!.month}}/{{movieDetail?.rDate!.year}}</h5>
+          <h5 class="genre">Genre: {{movieDetail?.genre}}</h5>
+          <h3 class="titDesc">Description:</h3>
+          <p class="description">{{movieDetail?.description}}</p>
+          <h5 class="duration">Duration: {{movieDetail?.duration}}</h5>
+          <div class="actions">
+            <button (click)="onAddToList()" [disabled]="isInWatchlist()">
+              <i class="fa-solid fa-plus"></i>
+              {{ isInWatchlist() ? 'On List' : 'Add Watch List' }}
+            </button>
+          </div>
+        </div>
+  
+        <div class="g-start-2" style="grid-row: 2; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <h3 style="margin: 10px;">Trailer:</h3>
+          <div class="ratio ratio-16x9">
+            <iframe *ngIf="safeTrailerUrl" [src]="safeTrailerUrl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
-</section>
+    </div>
+  </section>
+  
