--- a/src/app/presentation/pages/home/home.component.css
+++ b/src/app/presentation/pages/home/home.component.css
@@ -1,75 +1,72 @@
 .headerb {
-  background-image: url(src\assets\Images\image.webp);
-	-webkit-box-reflect: below 5px
-	linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
-	-webkit-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
-	transition: all 0.5s ease;
-  }
+  background-image: url(src/assets/Images/image.webp);
+  -webkit-box-reflect: below 5px linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
+  transition: all 0.5s ease;
+}
 
-  .sortButtons {
-    display: flex;
-    gap: 10px;
-  }
-  .sortButtons button{
-    border-radius: 10%;
-    color: #100f0f;
-    background-color:#fff ;
-    padding: 0.2rem 1rem;
-    
-  }
+.sortButtons {
+  display: flex;
+  gap: 10px;
+}
 
-  h1{
-    font-size: 13vh;
-    color: whitesmoke;
-    font-family: 'Play', sans-serif;
-  }
+.sortButtons button {
+  border-radius: 10%;
+  color: #100f0f;
+  background-color: #fff;
+  padding: 0.2rem 1rem;
+}
+
+h1 {
+  font-size: 13vh;
+  color: whitesmoke;
+  font-family: 'Play', sans-serif;
+}
 
 button {
-	background: #100f0f ;
-	color: #fff ;
-	font-size: 1.5vh;
-	padding: 0.5rem 3rem;
-	outline: none;
-	border: 0 ;
-	margin-bottom: 1vh;
-	transition-duration: 250ms;
-    transition-timing-function: ease-out;
-    transition-property: opacity, transform;
-    font-family: 'Play', sans-serif;
+  background: #100f0f;
+  color: #fff;
+  font-size: 1.5vh;
+  padding: 0.5rem 3rem;
+  outline: none;
+  border: 0;
+  margin-bottom: 1vh;
+  transition: opacity 250ms ease-out, transform 250ms ease-out;
+  font-family: 'Play', sans-serif;
 }
 
 button:hover {
-    transform: scale(1.1);
-    opacity: 1;
-  }
+  transform: scale(1.1);
+  opacity: 1;
+}
 
-  #cards_landscape_wrap-2{
-    text-align: center;
-    background-color:rgb(3, 5, 69)
-  }
-  #cards_landscape_wrap-2 .container{
-    padding-top: 80px; 
-    padding-bottom: 100px;
-  }
+#cards_landscape_wrap-2 {
+  text-align: center;
+  background-color: rgb(3, 5, 69);
+}
+
+#cards_landscape_wrap-2 .container {
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, min(15rem, 1fr));
-  gap: 1vw;
+  grid-template-columns: repeat(auto-fill, min(13rem, 1fr));
+  gap: 5vw;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   max-width: 100vw;
 }
 
-  @media screen and (min-width: 527px) {
-    .grid {
-      grid-template-columns: repeat(auto-fill, minmax(15rem, 2fr));
-    }
+@media screen and (min-width: 527px) {
+  .grid {
+    grid-template-columns: repeat(auto-fill, minmax(11rem, 1fr));
   }
-  @media screen and (max-width: 717px) {
-    .sortButtons button {
-      min-width: 15vw;
-    }
+}
+
+@media screen and (max-width: 717px) {
+  .sortButtons button {
+    min-width: 15vw;
   }
+}
